# ytdlp-http-wrapper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SPECS.md
.github/workflows/: ci.yml  docker.yml  release.yml
scripts/: ci.sh  dev.sh
src/: executor.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: query_deserialization_test.rs
